--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,12 @@ pollster = "0.4.0"
 palette = "0.7.6"
 slotmap = "1.0.7"
 glam = "0.30.5"
-i_overlay = "4.0.2"
-i_triangle = "0.36.3"
 itertools = "0.14.0"
+cosmic-text = "0.14.2"
+lru = "0.16.0"
+etagere = "0.2.15"
+ahash = "0.8.12"
+spin_sleep = "1.3.2"
 
 [build-dependencies]
 wgsl-grease = { git = "https://github.com/OnyxUI/wgsl-grease.git" }
